--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525212.md#1" title="大陆网文指美国大选是“正邪较量”引共鸣""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-04-at-11.07.13-am-320x200.png">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523578.md#1" title="【国会大选更新】参院还剩5席未决""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-03-at-11.36.58-PM-1-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xcbfpq327.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527423.md#1">大学入学简章公布 检定科目以英文最多</a><br>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527425.md#1">农业移工入住防疫旅馆 最高补贴1万500元</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527427.md#1">增1例境外移入 台女自捷克返国</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527369.md#1">疫情带来商机 台药品制造业产值估破900亿</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527233.md#1">中共强停蚂蚁集团上市 国际投资者失去信心</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527205.md#1">组图：密歇根州计票 两党支持者场外抗议</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12514711.md#1">麦塔斯：应对中共 国际移植协会需改七原则</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527489.md#1">美大选结果 台外交部：相信计票会顺利完成</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527492.md#1">台政院：美国各界强烈反中态势已形成</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527494.md#1">白宫易主美台关系倒退 萧美琴：不用担心</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527423.md#1">大学入学简章公布 检定科目以英文最多</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527425.md#1">农业移工入住防疫旅馆 最高补贴1万500元</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,893,017 人
+!共 366,897,085 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
